--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#">Get in Touch</a>
+    <a href="#" class="btn">Get in Touch</a>
     <nav>
       <ul>
         <li><a href="#our-beginning">Our Beginning</a></li>
@@ -22,11 +22,13 @@
 
   <div class="large-hero">
     <img src="assets/images/hero--large.jpg">
-    <h1>Your clarity.</h1>
-    <h2>One trip away.</h2>
-    <p>We create soul restoring journeys that inspire you to be you.</p>
-    <p><a href="#">Get Started Today</a></p>
-  </div>
+    <div class="large-hero__text-content">
+      <h1 class="large-hero__title">Your clarity.</h1>
+      <h2 class="large-hero__subtitle">One trip away.</h2>
+      <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
+      <p><a href="#" class="btn btn--orange btn--large">Get Started Today</a></p>
+    </div>
+    </div>
 
   <div id="our-beginning">
     <h2>The first trip we planned was our own.</h2>
@@ -52,7 +54,7 @@
     <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of the world you want to escape to we know the most scenic and inspiring locations.</p>
 
     <img src="assets/images/icons/wifi.svg">
-    <h3>Wi-Fi Waypoints</h3>
+    <h3>Wi-Fi Waypoints</h3> 
     <p>We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve mapped out where local wi-fi spots are and marked them in our app&rsquo;s map view.</p>
 
     <img src="assets/images/icons/fire.svg">
@@ -81,7 +83,7 @@
   </div>
 
   <footer>
-    <p>Copyright &copy; 2019 Clear View Escapes. All rights reserved. <a href="#">Get in Touch</a></p>
+    <p>Copyright &copy; 2019 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
   </footer>
   <!-- Leave this commented out HTML here until you need it for an upcoming "modal" lesson
   <div class="modal">
@@ -101,5 +103,6 @@
     <div class="modal__close">X</div>
   </div>
   This is the end of the "modal" reference HTML -->
+  <script src="bundle.js"></script>
 </body>
 </html>
